--- a/ourinternet/static/sass/_videos.scss
+++ b/ourinternet/static/sass/_videos.scss
@@ -1,7 +1,7 @@
 .webcast-embed,
 .video-embed{
     text-align: center;
-    max-width: 640px;
+    height: auto;
     background-color: $background_color;
     border: 1px solid $main_color;
     margin: 40px auto ;
